fix z-index 追加

--- a/src/styles/Components/header.css
+++ b/src/styles/Components/header.css
@@ -6,6 +6,7 @@
   width: 100%;
   background-color: white;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  z-index: 10;
 }
 
 .header__logo-container {
