--- a/src/styles/pages/home/Title.css
+++ b/src/styles/pages/home/Title.css
@@ -2,6 +2,7 @@
   position: relative;
   margin-inline: auto;
   max-width: 31.25rem;
+  z-index: 0;
 }
 
 .section-title__img {
@@ -13,7 +14,7 @@
   position: absolute;
   top: 1.625rem;
   display: flex;
-  height: 4rem;
+
   width: 100%;
   flex-direction: column;
   align-items: center;
@@ -104,7 +105,6 @@
 @media (min-width: 64rem) {
   .section-title {
     max-width: 62.5rem;
-    top: 1.625rem;
   }
   .section-title__overlay {
     height: 8.125rem;
